<resources>
    <string name="app_name">OrderFoodOnline</string>
    <string name="order_food_online_txt">Order Food Online</string>
    <string name="enter_address">Enter Your Address</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="find_restaurants">Find Restaurants</string>
    <string name="location_permission_missing_message">The Location permission is missing.\n\nTo grant this permission,click on OPEN SETTINGS,the Permissions and turn the Location permission on.</string>
    <string name="missing_permission_title">Permission Missing</string>
    <string name="search_by_res">Search By Restaurant</string>
    <string name="restaurant_img">Image</string>
    <string name="noRestaurants">No Restaurants In Your Area</string>
    <string-array name="distanceList">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="priceList">
        <item>No Price</item>
        <item>$10</item>
        <item>$100</item>
        <item>$1000</item>
    </string-array>
    <string name="filters_txt">FILTERS</string>
    <string name="addressTxt">Address</string>
    <string name="distanceTxt">Distance(miles):</string>
    <string name="create_account_text">LOGIN</string>
    <string name="sign_out_txt">LOGOUT</string>
    <string name="all_locations">All Locations</string>
    <string name="no_locations_msg_txt">No Locations Found.</string>
    <string name="re_order_last_order_text">REORDER YOUR LAST ORDER</string>
    <string name="pickup_text">PICKUP</string>
    <string name="delivery_text">DELIVERY</string>
    <string name="login_txt">LOGIN</string>
    <string name="register_txt">REGISTER</string>
    <string name="powered_by_txt">Powered by:</string>
    <string name="new_user_register_txt">New User / Register</string>
    <string name="customer_log_in_txt">Customer Login</string>
    <string name="email_sign_in_txt">Email</string>
    <string name="password_sign_in_txt">Password</string>
    <string name="forgot_password_txt">Forgot Password ?</string>
    <string name="sign_in_txt">LOGIN</string>
    <string name="guest_log_in_txt">GUEST LOGIN</string>
    <string name="login_via_txt">-- Login via --</string>
    <string name="email_empty_sign_in_msg">Email address can\'t be empty</string>
    <string name="email_valid_sign_in_msg">Please enter valid email address</string>
    <string name="password_empty_sign_in_msg">Password can\'t be empty</string>
    <string name="user_credentials_wrong_msg">Invalid login credentials !</string>
    <string name="register_user_sign_in_txt">Register User</string>
    <string name="google_sign_out_btn_txt">Sign out From Google</string>
    <string name="facebook_app_id">1743014702690004</string>
    <string name="password_recovery_txt">Password Recovery</string>
    <string name="password_recovery_msg">Please enter the email address you used to create your Clorder account.\n We will send you a temporary password.</string>
    <string name="forgot_send_txt">Send</string>
    <string name="site_key">6Lfl2l8UAAAAAHAK6pZyZkMa3yHLGA-kCbI_VlJY</string>
    <string name="new_user_sign_up_txt">Registration</string>
    <string name="new_user_name_txt">Name</string>
    <string name="new_user_email_txt">Email Id</string>
    <string name="new_user_password_txt">Password</string>
    <string name="create_act_txt">By creating an account you agree to our</string>
    <string name="terms_policy_txt">Terms of Use and Privacy Policy</string>
    <string name="create_account_txt">Create Account</string>
    <string name="new_user_cancel_txt">Cancel</string>
    <string name="existing_customer_sign_in_txt">Existing Customer / Login Here</string>
    <string name="email_empty_msg">Email address can\'t be empty</string>
    <string name="email_valid_msg">Please enter valid email Address</string>
    <string name="password_empty_msg">Password can\'t be empty</string>
    <string name="name_empty_msg">Name can\'t be empty</string>
    <string name="password_validation_msg">Password must be at least 8 characters, no more than 15 characters, and must include at least one upper case letter, one lower case letter, and one numeric digit.</string>
    <string name="order_history_txt">My Orders</string>
    <string name="no_past_orders_msg_txt">You have no past orders so far. \n Your orders when placed after signing in will be shown here for quick ordering in future.</string>
    <string name="order_id_history_txt">Order Id:</string>
    <string name="total_history_txt">TOTAL:</string>
    <string name="order_now_history_txt">Order Now</string>
    <string name="order_information_txt">Order Information</string>
    <string name="order_details_txt">Order Details</string>
    <string name="special_notes_txt">SPECIAL NOTES:</string>
    <string name="qty_details_txt">QTY</string>
    <string name="item_name_details_txt">ITEM</string>
    <string name="price_details_txt">PRICE</string>
    <string name="subtotal_details_txt">SubTotal</string>
    <string name="discount_details_txt">Discount</string>
    <string name="tax_details_txt">Tax</string>
    <string name="delivery_fee_txt">Delivery Fee</string>
    <string name="tip_details_txt">Tip</string>
    <string name="donation_txt">Donation</string>
    <string name="total_details_txt">TOTAL</string>
    <string name="order_now_details_txt">Order Now</string>
    <string name="order_history_pickup_text">PICKUP</string>
    <string name="order_history_delivery_text">Delivery</string>
    <string name="select_order_type">Select Order Type</string>
    <string name="select_order_cancel">Cancel</string>
    <string name="all_day_menu_text">ALL DAY MENU</string>
    <string name="check_out_text">CHECKOUT</string>
    <string name="view_cart_txt">VIEW CART</string>
    <string-array name="menu_list">
        <item>Appetizers</item>
        <item>Beverages</item>
        <item>Burgers</item>
        <item>Chef\'s Choices</item>
        <item>Desserts</item>
        <item>Dips</item>
        <item>Entrees</item>
        <item>Family Take Out Meal</item>
        <item>Fresh Juices</item>
    </string-array>
    <string name="home_txt">Home</string>
    <string name="my_orders_txt">My Orders</string>
    <string name="change_password_txt">Change Password</string>
    <string name="logout_txt">Logout</string>
    <string name="logout_msg">Are you sure want to Logout.</string>
    <string name="action_Cart">Cart</string>
    <string name="edit_profile_txt">Edit Profile</string>
    <string name="save_txt">Save</string>
    <string name="change_password_title_txt">Change Password</string>
    <string name="old_password_txt">Old Password</string>
    <string name="new_password_txt">New Password</string>
    <string name="confirm_password_txt">Confirm Password</string>
    <string name="change_save_txt">Save</string>
    <string name="old_password_empty_msg">Old password can\'t be empty</string>
    <string name="new_password_empty_msg">New password can\'t be empty</string>
    <string name="confirm_password_empty_msg">Confirm password can\'t be empty</string>
    <string name="old_password_validation_msg">Please enter valid old password.</string>
    <string name="new_password_validation_msg">Password must be at least 8 characters, no more than 15 characters, and must include at least one upper case letter, one lower case letter, and one numeric digit.</string>
    <string name="new_confirm_password_validation_msg">New password and confirm password is not same.</string>
    <string name="change_password_success">Your password has been changed successfully, Please login again.</string>
    <string name="no_items_msg_txt">No Items Found</string>
    <string name="your_food_order_txt">Your Food Order</string>
    <string name="items_text">ITEMS</string>
    <string name="qty_text">QTY</string>
    <string name="price_text">PRICE</string>
    <string name="subtotal_text">Subtotal</string>
    <string name="apply_coupon_txt">Apply Coupon</string>
    <string name="view_coupon_txt">View Coupons</string>
    <string name="tx_txt">Tax</string>
    <string name="delivery_charge_txt">Delivery Charge</string>
    <string name="discount_amount_txt">Discount</string>
    <string name="discount_msg">Please select coupon</string>
    <string name="tip_txt">Tip</string>
    <string name="tip_msg_txt">-Tap to change the tip</string>
    <string name="total_txt">Total</string>
    <string name="check_out_cap_txt">CHECKOUT</string>
    <string name="add_more_txt">ADD MORE</string>
    <string name="cart_empty_msg_txt">Your Cart is Hungry \n Please fill it with Food</string>
    <string-array name="tip_array">
        <item>InCash</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
        <item>Other</item>

    </string-array>
    <string name="schedule_order_txt">Schedule Order</string>
    <string name="confirm_schedule_txt">Confirm Schedule</string>
    <string name="order_date_schedule_txt">Order Date</string>
    <string name="order_time_schedule_txt">Order Time</string>
    <string name="schedule_later_txt">Schedule For Later</string>
    <string name="order_now_schedule_txt">Order For Now</string>
    <string name="or_dialog_txt">(OR)</string>
    <string name="today_txt">Today</string>
    <string name="closed_txt">Closed</string>
    <string name="tip_dialog_txt">TIP</string>
    <string name="tip_value_msg">Enter the Tip here:</string>
    <string name="cancel_button_txt">Cancel</string>
    <string name="ok_button_txt">OK</string>
    <string name="coupons_txt_title">Apply Promo Code</string>
    <string name="coupon_id_txt">Coupon Id</string>
    <string name="coupon_desc_txt">Coupon Description</string>
    <string name="coupon_expiry_date_txt">Expiry Date</string>
    <string name="apply_txt">APPLY</string>
    <string name="no_coupons_available_txt">No Coupons Available</string>
    <string name="more_text">MORE&#046;&#046;&#046;&#046;</string>
    <string name="add_item_title_txt">ADD ITEM</string>
    <string name="required_choices_txt">REQUIRED CHOICES</string>
    <string name="item_details_txt">ITEM DETAILS</string>
    <string name="item_price_txt">ITEM PRICE</string>
    <string name="quantity_txt">QUANTITY</string>
    <string name="add_to_orders_txt">ADD TO ORDER</string>
    <string name="special_make_pizza_txt">MAKE YOUR OWN-</string>
    <string name="item_details_selection_txt">Item Details</string>
    <string name="delivery_address_txt">Delivery Address</string>
    <string name="address_title_txt">ADDRESS</string>
    <string name="name_txt">Name*</string>
    <string name="address_txt">Address*</string>
    <string name="apt_suite_building_txt">Apt/Suite/Building</string>
    <string name="city_txt">City*</string>
    <string name="zip_code_txt">Zip code*</string>
    <string name="phone_num_txt">Phone number*</string>
    <string name="email_address_txt">Email address*</string>
    <string name="next_step_txt">NEXT-STEP</string>
    <string name="add_card_delivery_txt">ADD CARD</string>
    <string name="payment_info_txt">Payment Info</string>
    <string name="your_existing_cards_txt">YOUR EXISTING CARD(S)</string>
    <string name="add_new_card">Add New Card</string>
    <string name="payment_information_txt">Your payment information will be strictly used for easy checkouts.It is stored in compliance with industry&#8242;s best security practices.</string>
    <string name="add_a_card_txt">ADD A CARD</string>
    <string name="card_update_msg">Please sign out and sign in again if any cards have been added from any other device.</string>
    <string name="account_update_skip">Skip</string>
    <string name="pay_with_pay_pal_txt">Pay with PayPal</string>
    <string name="pay_with_google_pay_txt">Pay with Google</string>
    <string name="pay_with_card_txt">Pay With Card</string>
</resources>