<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/account_update_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#Fb5B5B"
        android:padding="10dp">

        <ImageView
            android:id="@+id/account_update_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:src="@mipmap/left_arrow" />

        <com.clorderclientapp.utils.FontTextViewRegularClass
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/payment_info_txt"
            android:textColor="@color/account_update_txt_col"
            android:textSize="@dimen/payment_info_txt_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/cardScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/paymentLayout"
        android:layout_below="@+id/account_update_layout"
        android:layout_marginBottom="10dp"
        android:fillViewport="true"
        android:visibility="invisible">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/add_card_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical"
                android:visibility="gone">

                <com.clorderclientapp.utils.FontTextViewRegularClass
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/your_card_list_txt_bg_col"
                    android:padding="10dp"
                    android:text="@string/your_existing_cards_txt"
                    android:textColor="@color/your_card_list_txt_col"
                    android:textSize="@dimen/your_card_list_txt_size"
                    android:textStyle="bold" />

                <com.clorderclientapp.utils.ExpandableHeightListview
                    android:id="@+id/card_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <com.clorderclientapp.utils.FontTextViewRegularClass
                android:id="@+id/payments_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_card_list_layout"
                android:background="@color/payments_txt_bg"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/add_new_card"
                android:textColor="@color/payments_txt_col"
                android:textSize="@dimen/payments_text_size"
                android:textStyle="bold" />


            <com.clorderclientapp.utils.FontTextViewRegularClass
                android:id="@+id/payment_information_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payments_txt"
                android:padding="10dp"
                android:text="@string/payment_information_txt"
                android:textColor="@color/payment_information_txt_col"
                android:textSize="@dimen/payment_information_txt_size"
                android:textStyle="bold" />


            <com.clorderclientapp.utils.FontTextViewRegularClass
                android:id="@+id/add_a_card_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/payment_information_txt"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/drawable_add_card_bg"
                android:drawableEnd="@mipmap/plus_card"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/plus_card"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/add_a_card_txt"
                android:textAllCaps="false"
                android:textColor="@color/add_a_card_btn_txt"
                android:textSize="@dimen/add_a_card_txt_size" />

            <com.clorderclientapp.utils.FontTextViewRegularClass
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_a_card_btn"
                android:padding="10dp"
                android:text="@string/card_update_msg" />


        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/paymentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.clorderclientapp.utils.FontTextViewRegularClass
            android:id="@+id/payWithcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/account_update_done_txt_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pay_with_card_txt"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.clorderclientapp.utils.FontTextViewRegularClass
            android:id="@+id/google_pay_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/pay_pal_btn_txt_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pay_with_google_pay_txt"
            android:textColor="@color/pay_with_google_pay_txt_col"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />


        <com.clorderclientapp.utils.FontTextViewRegularClass
            android:id="@+id/pay_pal_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/pay_pal_btn_txt_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pay_with_pay_pal_txt"
            android:textColor="@color/pay_pal_btn_txt_col"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.clorderclientapp.utils.FontTextViewRegularClass
            android:id="@+id/skip_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/account_update_done_txt_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/account_update_skip"
            android:textColor="@color/account_update_done_txt_col"
            android:textSize="@dimen/account_update_txt_size"
            android:textStyle="bold"
            android:visibility="gone" />


    </LinearLayout>


</RelativeLayout>