<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@mipmap/item_list_page"
        android:padding="10dp">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:src="@mipmap/left_arrow" />

        <TextView
            android:id="@+id/address_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/delivery_address_txt"
            android:textColor="@color/delivery_address_txt_col"
            android:textSize="@dimen/delivery_address_txt_size"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/payments_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_title"
        android:background="@color/address_txt_bg"
        android:padding="10dp"
        android:text="@string/address_title_txt"
        android:textColor="@color/address_txt_col"
        android:textSize="@dimen/address_text_size"
        android:textStyle="bold"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_step_menu_layout"
        android:layout_below="@+id/address_title"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/name_txt"
                android:textColor="@color/order_address_txt_col"
                android:textSize="@dimen/order_address_txt_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_black_border_bg"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ-."
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/address_txt"
                android:textColor="@color/order_address_txt_col"
                android:textSize="@dimen/order_address_txt_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addressEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_black_border_bg"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/apt_suite_building_txt"
                android:textColor="@color/order_address_txt_col"
                android:textSize="@dimen/order_address_txt_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/buildingEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_black_border_bg"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/city_txt"
                android:textColor="@color/order_address_txt_col"
                android:textSize="@dimen/order_address_txt_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cityEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_black_border_bg"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:imeOptions="actionNext"
                android:text="@string/zip_code_txt"
                android:textColor="@color/order_address_txt_col"
                android:textSize="@dimen/order_address_txt_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/zipCodeEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_black_border_bg"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="5"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/phone_num_txt"
                android:textColor="@color/order_address_txt_col"
                android:textSize="@dimen/order_address_txt_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneNumberEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_black_border_bg"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/email_address_txt"
                android:textColor="@color/order_address_txt_col"
                android:textSize="@dimen/order_address_txt_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/drawable_black_border_bg"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="5dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/next_step_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/add_to_order_bg"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/next_step_txt"
            android:textColor="@color/next_step_txt_col"
            android:textSize="@dimen/next_step_txt_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/next_screen_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/add_card_delivery_txt"
            android:textColor="@color/menu_txt_col"
            android:textSize="@dimen/menu_txt_size"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>